--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,10 +7,9 @@ services:
     restart: always
     stop_grace_period: 1m30s
     env_file:
-      - docker/db.env
+      - db.env
     volumes:
       - seek-mysql-db:/var/lib/mysql
-    platform: linux/amd64
 
   seek: # The SEEK application
     #build: .
@@ -26,7 +25,7 @@ services:
       SOLR_HOST: solr
       NO_ENTRYPOINT_WORKERS: 1
     env_file:
-      - docker/db.env
+      - db.env
     volumes:
       - seek-filestore:/seek/filestore
       - seek-cache:/seek/tmp/cache
@@ -38,7 +37,6 @@ services:
     links:
       - db
       - solr
-    platform: linux/amd64
 
   seek_workers: # The SEEK delayed job workers
     #build: .
@@ -52,7 +50,7 @@ services:
       SOLR_PORT: 8983
       SOLR_HOST: solr
     env_file:
-      - docker/db.env
+      - db.env
     volumes:
       - seek-filestore:/seek/filestore
       - seek-cache:/seek/tmp/cache
@@ -62,7 +60,6 @@ services:
     links:
       - db
       - solr
-    platform: linux/amd64
 
   solr:
     image: fairdom/seek-solr:8.11
@@ -77,7 +74,6 @@ services:
       - solr-precreate
       - seek
       - /opt/solr/server/solr/configsets/seek_config
-    platform: linux/amd64
 
 volumes:
   seek-filestore:
