add correct path

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/app/templates/index" }
+      { "source": "/(.*)", "destination": "/app/app" }
     ]
   }
