correct vercel requirements

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/app/app" }
+      { "source": "/(.*)", "destination": "/app/app.py" }
     ]
   }
