--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
+
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/app/app.py" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+      {
+          "src": "./index.py",
+          "use": "@vercel/python"
+      }
+  ],
+  "routes": [
+      {
+          "src": "/(.*)",
+          "dest": "/"
+      }
+  ]
+}
