--- a/docker/docker-compose.seek.yml
+++ b/docker/docker-compose.seek.yml
@@ -10,6 +10,7 @@ services:
       - db.env
     volumes:
       - seek-mysql-db:/var/lib/mysql
+    platform: linux/amd64
 
   seek: # The SEEK application
     #build: .
@@ -37,6 +38,7 @@ services:
     links:
       - db
       - solr
+    platform: linux/amd64
 
   seek_workers: # The SEEK delayed job workers
     #build: .
@@ -60,6 +62,7 @@ services:
     links:
       - db
       - solr
+    platform: linux/amd64
 
   solr:
     image: fairdom/seek-solr:8.11
@@ -74,6 +77,7 @@ services:
       - solr-precreate
       - seek
       - /opt/solr/server/solr/configsets/seek_config
+    platform: linux/amd64
 
 volumes:
   seek-filestore:
