update project structure for vercel, fix hosting

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,9 @@
 
 {
-  "version": 2,
-  "builds": [
-      {
-          "src": "app/app.py",
-          "use": "@vercel/python"
-      }
-  ],
   "routes": [
       {
           "src": "/(.*)",
-          "dest": "app/app.py"
+          "dest": "api/index.py"
       }
   ]
 }
